# develop

./: .gitignore  .travis.yml  README.md  debug.sh  install.sh  meson.build  uninstall.sh
.github/: FUNDING.yml
data/templates/app/: README.md  config.vala  meson.build
data/templates/app/data/: appdata.xml  desktop  meson.build
data/templates/app/debian/: changelog  control  copyright  rules
data/templates/app/po/: meson.build
data/templates/app/po/extra/: POTFILES  meson.build
data/templates/app/src/: Application.vala  meson.build
data/templates/switchboard-widget/src/: Plug.vala  meson.build
data/templates/switchboard-widget/src/Backend/: Settings.vala
data/templates/switchboard-widget/src/Widgets/: GeneralSection.vala
data/templates/wingpanel-widget/: .travis.yml  README.md  meson.build
data/templates/wingpanel-widget/src/: Indicator.vala
po/: LINGUAS  (+9 more)
src/: Application.vala  CommonRegEx.vala  Window.vala  meson.build
src/Actions/ProjectEditing/: Actions.vala
src/Actions/Window/: Actions.vala
src/Develop/: Application.vala  CommonRegEx.vala  Window.vala
src/Develop/Actions/TemplateEditing/: Actions.vala
src/Develop/Actions/Window/: Actions.vala
src/Develop/Entities/Generic/: KeyValuePair.vala
src/Develop/Entities/Modules/: Module.vala
src/Develop/Entities/Plugin/: PluginModule.vala
src/Develop/Entities/Project/: ProjectItemSource.vala
src/Develop/Entities/Template/: TemplateFile.vala  TemplateFileType.vala  TemplateToken.vala
src/Develop/Infrastructure/: Invoker.vala  Load_plugin.vala  ModuleLoader.vala  PluginLoader.vala
src/Develop/Providers/: PluginProvider.vala  ProviderBase.vala  ProviderRegistry.vala
src/Develop/Providers/Editor/: ProviderBase.vala
src/Develop/Services/: ActionManager.vala  FileSystem.vala  PluginContext.vala  RDNN.vala  TemplateService.vala  UserSettings.vala
src/Develop/Services/Templates/: App.vala  SwitchboardWidget.vala  WingpanelWidget.vala
src/Develop/Views/: Editor.vala  FirstRun.vala  MainView.vala  ProjectCreator.vala  ProjectEditingView.vala  Settings.vala  SettingsView.vala  TemplateCreationView.vala  WelcomeView.vala
src/Develop/Views/Partials/Editor/: CodeEditor.vala  DirectoryTreeView.vala
src/Develop/Widgets/: ActionBar.vala  ComboBoxWithLabel.vala  Entry.vala  EntryWithLabel.vala  FileSelector.vala  SettingItem.vala
src/Develop/Widgets/Dialogs/: ConfirmRemove.vala  DialogCreateProject.vala  DialogWindow.vala  EditableValuePrompt.vala
src/Develop/Widgets/Editor/: Aside.vala  Assets.vala  BottomBar.vala  EditorTab.vala  EmptyEditor.vala  SourceEditor.vala  SourceListItem.vala  SourceView.vala  Toolbar.vala  Treeview.vala
src/Develop/Widgets/Window/: HeaderBar.vala  QuickPrompt.vala
src/Develop/___/Views/: MainView.vala
src/Entities/Generic/: KeyValuePair.vala
src/Entities/Project/: Project.vala  ProjectItem.vala  ProjectItemDirectory.vala  ProjectItemType.vala  ProjectSourceNode.vala
src/Entities/Template/: TemplateFile.vala  TemplateFileType.vala  TemplateToken.vala
src/LibAlcadicaDevelopPlugin/: Main.vala  Plugin.vala
src/LibAlcadicaDevelopPlugin/Context/: ApplicationContext.vala  CommandContext.vala  EditorContext.vala  ProjectContext.vala  TemplateContext.vala
src/LibAlcadicaDevelopPlugin/Entities/: BuildSystemContext.vala  CommandContext.vala  EditorContext.vala  PluginContext.vala  ProjectContext.vala  ScmContext.vala  TemplateContext.vala
src/LibAlcadicaDevelopPlugin/Entities/Application/: BottomToolbarContext.vala
src/LibAlcadicaDevelopPlugin/Entities/BuildSystem/: BuildSystem.vala
src/LibAlcadicaDevelopPlugin/Entities/Command/: Command.vala
src/LibAlcadicaDevelopPlugin/Entities/Common/: Form.vala  KeyValuePair.vala  SettingEntry.vala  SettingRegistry.vala  SourceTree.vala  SourceTreeItem.vala
src/LibAlcadicaDevelopPlugin/Entities/Editor/: CurrentFileContext.vala  Editor.vala  EditorList.vala  TreeviewContext.vala  TreeviewMenuContext.vala
src/LibAlcadicaDevelopPlugin/Entities/Project/: Project.vala  ProjectFileSystem.vala  ProjectParser.vala  ProjectSettings.vala  ProjectSourceTree.vala  ProjectSourceTreeItem.vala
src/LibAlcadicaDevelopPlugin/Entities/Scm/: Scm.vala
src/LibAlcadicaDevelopPlugin/Entities/Template/: Template.vala  TemplateFile.vala  TemplateFileType.vala  TemplateToken.vala
src/LibAlcadicaDevelopPlugin/Services/: FileSystemService.vala  RDNNService.vala
src/LibAlcadicaValaProject/: Main.vala
src/LibAlcadicaValaProject/Entities/: Project.vala  ProjectItem.vala  ProjectItemDirectory.vala  ProjectItemSource.vala  ProjectSourceNode.vala  ProjectVersion.vala
src/LibAlcadicaValaProject/Example/: project.valaproject.xml
src/LibAlcadicaValaProject/Services/: ProjectSourceNode.vala  XMLProjectFileParser.vala  XMLProjectFileWriter.vala
src/Plugins/ElementaryTemplates/: meson.build  plugin.vala
src/Plugins/ElementaryTemplates/Entities/: ApplicationTemplate.vala  ElementaryTemplatesDirectory.vala  SwitchboardWidgetTemplate.vala  WingpanelIndicatorTemplate.vala
src/Plugins/LanguageVala/: TreeviewHandler.vala  meson.build  plugin.vala
src/Plugins/LanguageVala/treeview/: AssetsHandler.vala  DependenciesHandler.vala  SourceHandler.vala
src/Plugins/ProjectTreeview/: handlers.vala  meson.build  plugin.vala
src/Services/: ActionManager.vala  FileSystem.vala  ProjectFileService.vala  RDNN.vala  TemplateService.vala  UserSettings.vala
src/Services/Templates/: App.vala  SwitchboardWidget.vala  WingpanelWidget.vala
src/Views/: MainView.vala  ProjectEditingView.vala  SettingsView.vala  TemplateCreationView.vala  WelcomeView.vala
src/Views/Partials/Editor/: DirectoryTreeView.vala
src/Views/Partials/Forms/: FormBase.vala  FormNewApp.vala  FormNewSwitchboardWidget.vala  FormNewWingpanelWidget.vala  FormUserData.vala
src/Views/Partials/Settings/: SettingsBase.vala  UserDataSettings.vala  UserDataSettingsFirstRun.vala
src/Views/Partials/Window/: HeaderBar.vala
src/Widgets/: ActionBar.vala  ComboBoxWithLabel.vala  Entry.vala  EntryWithLabel.vala  SettingItem.vala  SwitchWithLabel.vala
src/Widgets/Editor/: Toolbar.vala
(+51 files in other folders)
