sources = files(
    'Application.vala',
    'Actions/ProjectEditing/Actions.vala',
    'Actions/Window/Actions.vala',
    'CommonRegEx.vala',
    'Entities/Generic/KeyValuePair.vala',
    'Entities/Template/TemplateFile.vala',
    'Entities/Template/TemplateFileType.vala',
    'Entities/Template/TemplateToken.vala',
    'Services/ActionManager.vala',
    'Services/FileSystem.vala',
    'Services/RDNN.vala',
    'Services/Templates/App.vala',
    'Services/Templates/SwitchboardWidget.vala',
    'Services/Templates/WingpanelWidget.vala',
    'Services/TemplateService.vala',
    'Services/UserSettings.vala',
    'Views/MainView.vala',
    'Views/Partials/Forms/FormBase.vala',
    'Views/Partials/Forms/FormNewApp.vala',
    'Views/Partials/Forms/FormNewSwitchboardWidget.vala',
    'Views/Partials/Forms/FormNewWingpanelWidget.vala',
    'Views/Partials/Forms/FormUserData.vala',
    'Views/Partials/Settings/SettingsBase.vala',
    'Views/Partials/Settings/UserDataSettings.vala',
    'Views/Partials/Settings/UserDataSettingsFirstRun.vala',
    'Views/Partials/Window/HeaderBar.vala',
    'Views/ProjectEditingView.vala',
    'Views/SettingsView.vala',
    'Views/WelcomeView.vala',
    'Widgets/ActionBar.vala',
    'Widgets/ComboBoxWithLabel.vala',
    'Widgets/Entry.vala',
    'Widgets/EntryWithLabel.vala',
    'Widgets/SettingItem.vala',
    'Widgets/SwitchWithLabel.vala',
)
